<resources>
    <string name="app_name">intercepTLS</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="hosts_default">hosts_default</string>
    <string name="hosts_additional">hosts_additional</string>
    <string name="result">Results</string>
    <string name="target">Target Host</string>
    <string name="hosts_default_title">Default hosts</string>
    <string name="hosts_default_description">Which hosts do we probe?</string>
    <string name="hosts_additional_title">Additional hosts</string>
    <string name="hosts_additional_description">Additional hosts for probing can be specified here. Each host must be specified in a new line.</string>
    <string name="title_activity_result_view">Test report</string>
    <string name="text_no_results">No results yet.</string>
    <string name="title_activity_progress">Test in progress</string>
    <string name="title_activity_session_view">Probed hosts</string>
    <string name="tls_version">TLS-Version:</string>
    <string name="tls_service_name">TLS Background Service</string>
    <string name="upload_result_service_name">Result Upload Service</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="background_service">Background Service</string>
    <string name="label_about">About intercepTLS</string>
    <string name="about_text">This application is part of a Master\'s Thesis created in SS2018. For more information visit </string>
    <string name="interception_title">Interception detected</string>
    <string name="data_collection">Data collection</string>
    <string name="check_permission_location">Without the permission to access your location we cannot access the WiFi SSID. You can disable the transmission of your location in the settings separately.</string>
    <string name="location">Share location</string>
    <string name="license">License</string>
    <string name="libraries_apache_text"><a href="http://www.apache.org/licenses/">- HTTP Core</a>\n<a href="http://www.apache.org/licenses/">- Commons IO</a>\n<a href="http://www.joda.org/joda-time/license.html">- Joda-Time</a>\n<a href="https://square.github.io/retrofit/#license">- Retrofit</a>\n<a href="https://square.github.io/retrofit/#license">- converter-gson</a>\n<a href="https://square.github.io/okhttp/#license">- logging-interceptor</a>\n</string>
    <string name="libraries_mit_text"><a href="https://www.slf4j.org/license.html">- SLF4J</a>\n<a href="https://www.bouncycastle.org/license.html">- Bouncy Castle</a></string>
    <string name="notification_conduct_test">Your network is tested for interceptions.</string>
</resources>
